📝 (ContactHeader.vue): Add styling to ContactHeader component for better alignment and readability 📝 (TheContact.vue): Correct variable name from $dark-gray-color to $dark-grey-color for consistency 📝 (TheSkills.vue): Refactor border styling in Skills component to use pseudo elements for better design and maintainability 📝 (_colors.scss): Update variable name from $dark-gray-color to $dark-grey-color for consistency in color naming

--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -1,5 +1,5 @@
 $black-color: #151515;
-$dark-gray-color: #242424;
+$dark-grey-color: #242424;
 $green-color: #4ee1a0;
 $grey-color: #d9d9d9;
 $white-color: #fff;
